# String_wizard

./: Cargo.toml  DEPENDENTS.md  LICENSE  README.md
Source/: chunk.rs  joiner.rs  lib.rs  span.rs
Source/magic_string/: append.rs  indent.rs  mod.rs  movement.rs  prepend.rs  source_map.rs  update.rs
Source/source_map/: locator.rs  sourcemap_builder.rs
benches/: joiner_join.rs
examples/: source_map.rs
