[[bench]]
harness = false
name = "joiner_join"

[dependencies]
index_vec = { version = "0.1.3" }
oxc_sourcemap = { version = "0.25.0", optional = true }
rustc-hash = { version = "1.1.0" }

[dev-dependencies]
criterion = { version = "0.4" }
glob = { version = "0.3.1" }
insta = { version = "1.31.0" }

[features]
source_map = ['dep:oxc_sourcemap']

[lib]
path = "Source/lib.rs"

[package]
description = "manipulate string like a wizard"
edition = "2021"
license-file = "LICENSE"
name = "string_wizard"
version = "0.0.22"

[profile]

[profile.release]
debug = true
