[[bench]]
harness = false
name = "joiner_join"

[dependencies]
index_vec = { version = "0.1.4" }
oxc_sourcemap = { version = "1.0.7", optional = true }
rustc-hash = { version = "2.1.1" }

[dev-dependencies]
criterion = { version = "0.5" }
glob = { version = "0.3.2" }
insta = { version = "1.42.1" }

[features]
source_map = ['dep:oxc_sourcemap']

[lib]
path = "Source/lib.rs"

[package]
description = "manipulate string like a wizard"
edition = "2024"
license-file = "LICENSE"
name = "string_wizard_old"
version = "0.0.22"

[profile]

[profile.release]
debug = true
